--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-    <link rel="preload" as="script" href="/portfolio/assets/portfolio-dxh39fae74c54f8ce.js" crossorigin></head>
+    <link rel="preload" as="script" href="/./assets/portfolio-dxh2bb7f9afb5f46cdf.js" crossorigin></head>
     <body>
         <div id="main"></div>
-    <script type="module" async src="/portfolio/assets/portfolio-dxh39fae74c54f8ce.js"></script>
+    <script type="module" async src="/./assets/portfolio-dxh2bb7f9afb5f46cdf.js"></script>
             </body>
 </html>
