--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>portfolioportfolio</title>
+        <title>portfolioportfolioportfolio</title>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-    <link rel="preload" as="script" href="/./assets/portfolio-dxh2bb7f9afb5f46cdf.js" crossorigin><link rel="preload" as="script" href="/./assets/portfolio-dxhf40ad13dadf6390.js" crossorigin></head>
+    <link rel="preload" as="script" href="/./assets/portfolio-dxh2bb7f9afb5f46cdf.js" crossorigin><link rel="preload" as="script" href="/./assets/portfolio-dxhf40ad13dadf6390.js" crossorigin><link rel="preload" as="script" href="/./assets/portfolio-dxhd7e32e137b8fe9a1.js" crossorigin></head>
     <body>
         <div id="main"></div>
     <script type="module" async src="/./assets/portfolio-dxh2bb7f9afb5f46cdf.js"></script>
             <script type="module" async src="/./assets/portfolio-dxhf40ad13dadf6390.js"></script>
+            <script type="module" async src="/./assets/portfolio-dxhd7e32e137b8fe9a1.js"></script>
             </body>
 </html>
